# geodesk-py

./: CMakeLists.txt  NOTICE  pyproject.toml
doc/releases/: v2.1.2.md
scripts/: dev-install.sh  lookup.py  test_id_lookup.py
src/python/query/: PyFeatures.cpp
test/: conftest.py
