[build-system]
requires = ["scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]
wheel.packages = ["src/geodesk"]

[tool.cibuildwheel]
build = "cp*-manylinux_x86_64 cp*-win_amd64 cp*-macosx_x86_64"
# We're excluding musllinux for now...
# build = "cp*-manylinux_x86_64 cp*-musllinux_x86_64 cp*-win_amd64 cp*-macosx_x86_64"

[project]
name = "geodesk"
description = "Fast and storage-efficient spatial database engine for OpenStreetMap features"
version = "2.1.2"
license = { text = "LGPL-3.0-only" }
readme = "README.md"
keywords = ["gis", "openstreetmap", "geospatial", "database" ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",  
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Database :: Database Engines/Servers",
]
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.2",
    "shapely >=2.1,<2.2",
]

[tool.pytest.ini_options]
testpaths = ["test"]

[project.urls]
Homepage = "https://www.geodesk.com"
Documentation = "https://docs.geodesk.com/python"
Repository = "https://github.com/clarisma/geodesk-py"
"Bug Tracker" = "https://github.com/clarisma/geodesk-py/issues"
